--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ plugins:
 relative_links:
   enabled: true
   collections: true
-include:
-  - README.md
-  - BinaryTree.md
+# include:
+#   - README.md
+#   - BinaryTree.md
