--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
-theme: minima
+# theme: minima
+remote_theme: pages-themes/hacker@v0.2.0
 markdown: kramdown
 plugins:
   - jekyll-relative-links
+  - jekyll-remote-theme
 relative_links:
   enabled: true
   collections: true
