--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ plugins:
 relative_links:
   enabled: true
   collections: true
-# include:
-#   - README.md
-#   - BinaryTree.md
+include:
+  - README.md
+  - BinaryTree.md
